--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.5.2"
   }
 }
