feat: Implement comprehensive expense management API
- Added routes for creating, retrieving, updating, and deleting expenses.
- Introduced monthly budget tracking and reporting features.
- Implemented category-based expense retrieval and totals calculation.
- Enhanced error handling and validation for expense data.
- Integrated caching for improved performance on expense retrieval.
- Updated TypeScript models for expenses to include created and updated timestamps.
- Configured server with CORS and improved error handling middleware.
- Added README documentation for project overview and setup instructions.
- Created constants for expense categories to standardize input.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,11 @@
 PORT=3000
-FIREBASE_CONFIG='''{
-    apiKey: "AIz*********************E",
-    authDomain: "personal-expense-tracker.firebaseapp.com",
-    projectId: "personal-expense-tracker",
-    storageBucket: "personal-expense-tracker.firebasestorage.app",
-    messagingSenderId: "*************",
-    appId: "1:*************:web:****************",
-    measurementId: "G-**********"
-}'''
+DEFAULT_USER_ID='johndoe@gmail.com'
+FIREBASE_CONFIG='{
+    "apiKey": "AIz*********************E",
+    "authDomain": "personal-expense-tracker.firebaseapp.com",
+    "projectId": "personal-expense-tracker",
+    "storageBucket": "personal-expense-tracker.firebasestorage.app",
+    "messagingSenderId": "*************",
+    "appId": "1:*************:web:****************",
+    "measurementId": "G-**********"
+}'
