--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "type": "commonjs",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "build": "echo \"Error: no build specified\" && exit 1",
-    "start": "node server.js",
+    "dev": "pnpx nodemon --exec pnpx ts-node server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,13 +15,25 @@
   "license": "ISC",
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.5.2"
+    "@types/node": "^24.5.2",
+    "module-alias": "^2.2.3",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
+  },
+  "_moduleAliases": {
+    "@config": "./config",
+    "@services": "./services",
+    "@routes": "./routes",
+    "@utils": "./utils",
+    "@common": "../common"
   }
 }
