--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,21 +1,22 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "es6",
         "module": "commonjs",
-        "rootDir": "./",
-        "outDir": "./dist",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
+        "baseUrl": ".",
+        "outDir": "dist",
         "paths": {
             "@common/*": ["../common/*"],
             "@config/*": ["./config/*"],
             "@routes/*": ["./routes/*"],
             "@services/*": ["./services/*"],
-            "@utils/*": ["./utils/*"]
+            "@utils/*": ["./utils/*"],
+            "*": ["node_modules/*", "types/*"]
         }
     },
-    "include": ["**/*.ts"],
-    "exclude": ["node_modules", "**/*.test.ts"]
+    "include": ["**/*"],
+    "exclude": ["node_modules"]
 }
