--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.2",
+    "recharts": "^3.2.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
