--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "init": "npx concurrently \"cd backend && pnpm install\" \"cd frontend && pnpm install\"",
     "dev": "npx concurrently \"cd backend && pnpm run dev\" \"cd frontend && pnpm run dev\"",
     "build": "npx concurrently \"cd backend && pnpm run build\" \"cd frontend && pnpm run build\"",
     "start": "npx concurrently \"cd backend && pnpm run start\" \"cd frontend && pnpm run start\"",
@@ -12,5 +13,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.15.0"
+  "packageManager": "pnpm@10.15.0",
+  "workspaces": [
+    "backend",
+    "frontend"
+  ]
 }
