--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
-    "node-cache": "^5.1.2"
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
